--- a/public/assets/main.css
+++ b/public/assets/main.css
@@ -60,6 +60,7 @@ h1 {
 /* grid */
 .grid {
   display: flex;
+  flex-direction: column;
 }
 
 .grid-item {
@@ -72,4 +73,10 @@ h1 {
   color:#a5a4a3;
   border-radius: 0.1875em;
   padding:0.75em 0.5em;
+}
+
+@media screen and (min-width: 40em) {
+    .grid {
+      flex-direction: row;
+    }
 }
